--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<ol>
-		<li><a href="/org-auto/">org-auto</a></li>
+		<li><a href="/complete/">complete</a></li>
 	</ol>
 </body>
 </html>
