--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-responsive.min.css">
 </head>
 <body>
-	<ol>
-		<li><a href="/complete/">complete</a></li>
-	</ol>
+	<div class="container">
+    <div class="page-header">
+      <h1>Examples</h1>
+			<p>A list of examples</p>
+    </div>
+    <div class="row-fluid">
+				<ol>
+					<li><a href="/01-synchronous/">01-synchronous</a></li>
+					<li><a href="/02-realtime/">02-realtime</a></li>
+					<li><a href="/complete/">complete</a></li>
+				</ol>
+    </div>
 </body>
 </html>
