--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<ol>
 					<li><a href="/01-synchronous/">01-synchronous</a></li>
 					<li><a href="/02-realtime/">02-realtime</a></li>
+					<li><a href="/03-latest/">03-latest</a></li>
 					<li><a href="/complete/">complete</a></li>
 				</ol>
     </div>
