--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<li><a href="/01-synchronous/">01-synchronous</a></li>
 					<li><a href="/02-realtime/">02-realtime</a></li>
 					<li><a href="/03-latest/">03-latest</a></li>
+					<li><a href="/04-latest/">04-latest</a></li>
 					<li><a href="/complete/">complete</a></li>
 				</ol>
     </div>
