--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<li><a href="/02-realtime/">02-realtime</a></li>
 					<li><a href="/03-latest/">03-latest</a></li>
 					<li><a href="/04-latest/">04-latest</a></li>
+					<li><a href="/05-throttle/">05-throttle</a></li>
 					<li><a href="/complete/">complete</a></li>
 				</ol>
     </div>
