--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 					<li><a href="/03-latest/">03-latest</a></li>
 					<li><a href="/04-latest/">04-latest</a></li>
 					<li><a href="/05-throttle/">05-throttle</a></li>
-					<li><a href="/complete/">complete</a></li>
+					<li><a href="/06-rx/">06-rx</a></li>
+					<li><a href="/07-different-intervals/">07-different-intervals</a></li>
 				</ol>
     </div>
 </body>
