Add two non-searchbox examples

--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
 					<li><a href="/07-different-intervals/">07-different-intervals</a></li>
 				</ol>
     </div>
+		<div class="row-fluid">
+				<ol>
+					<li><a href="/followthemouse/">Follow the mouse</a></li>
+					<li><a href="/bitcointicker/">Bitcoin exchange rate ticker</a></li>
+				</ol>
+    </div>
 </body>
 </html>
