Some more examples

--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
 				</ol>
     </div>
 		<div class="row-fluid">
-				<ol>
-					<li><a href="/followthemouse/">Follow the mouse</a></li>
-					<li><a href="/bitcointicker/">Bitcoin exchange rate ticker</a></li>
-				</ol>
+			<ol>
+				<li><a href="/map/">map</a></li>
+				<li><a href="/flatmap/">flatMap</a></li>
+			</ol>
+    </div>
+		<div class="row-fluid">
+			<ol>
+				<li><a href="/timerstream/">Timer stream</a></li>
+				<li><a href="/followthemouse/">Follow the mouse</a></li>
+				<li><a href="/bitcointicker/">Bitcoin exchange rate ticker</a></li>
+			</ol>
     </div>
 </body>
 </html>
