--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 		<div class="row-fluid">
 			<ol>
 				<li><a href="/map/">map</a></li>
+				<li><a href="/filter/">filter</a></li>
 				<li><a href="/flatmap/">flatMap</a></li>
+				<li><a href="/combined/">combined</a></li>
 			</ol>
     </div>
 		<div class="row-fluid">
