Use correct path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row-fluid">
 				<ol>
-					<li><a href="/01-synchronous/">01-synchronous</a></li>
+					<li><a href="/01-simple/">01-simple</a></li>
 					<li><a href="/02-realtime/">02-realtime</a></li>
 					<li><a href="/03-latest/">03-latest</a></li>
 					<li><a href="/04-latest/">04-latest</a></li>
