--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				<li><a href="/timerstream/">Timer stream</a></li>
 				<li><a href="/followthemouse/">Follow the mouse</a></li>
 				<li><a href="/bitcointicker/">Bitcoin exchange rate ticker</a></li>
+				<li><a href="/transactions/">Transaction</a></li>
 			</ol>
     </div>
 </body>
