--- a/transactions/index.html
+++ b/transactions/index.html
@@ -21,6 +21,10 @@
 		.withdrawal {
 		background-color: red;
 		}
+		#accounts li {
+		border-style: solid;
+		border-width: 1px;
+		}
 	</style>
 </head>
 <body>
