--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
 				<li><a href="/timerstream/">Timer stream</a></li>
 				<li><a href="/followthemouse/">Follow the mouse</a></li>
 				<li><a href="/bitcointicker/">Bitcoin exchange rate ticker</a></li>
-				<li><a href="/transactions/">Transaction</a></li>
+			</ol>
+    </div>
+		<div class="row-fluid">
+			<ol>
+				<li><a href="/transactions-complete/">Bank accounts</a></li>
+				<li><a href="/transactions-simple/">Simple transactions</a></li>
 			</ol>
     </div>
 </body>
