--- a/transactions-simple/index.html
+++ b/transactions-simple/index.html
@@ -23,7 +23,7 @@
 		}
 		#accounts li {
 		border-style: solid;
-		border-width: 1px;
+		border-width: 0px;
 		}
 	</style>
 </head>
@@ -33,31 +33,23 @@
       <h1 id="titleheader"></h1>
 			<p id="description"></p>
     </div>
-    <div class="row-fluid">
-			<div class="columns">
-				<p>Known account numbers:</p>
-				<ol id="accounts" class="five"></ol>
-			</div>
-	    <span id="output"></span>
-    </div>
 		<div class="row-fluid">
 			<div>
-				<p>Transactions of account <span id="selectedid" class="bold"></span>:</p>
-				<!-- <ol id="overview" class="two list-group"></ol>-->
+				<p>All transactions</p>
 				<table class="table table-striped">
 					<thead>
 						<tr>
 							<th>#</th>
 							<th>Amount</th>
 							<th>Time</th>
-							<th>Account number</th>
+							<th>From account</th>
+							<th>To account</th>
 							<th>Description</th>
 						</tr>
 					</thead>
 					<tbody id="overview">
 					</tbody>
   			</table>
-				<p>Balance: <span id="selectedbalance" class="bold"></span>:</p>
 			</div>
 	    <span id="output"></span>
     </div>
