--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<ol>
 				<li><a href="/transactions-complete/">Bank accounts</a></li>
 				<li><a href="/transactions-simple/">Simple transactions</a></li>
+				<li><a href="/transactions-separated-by-account/">Transactions separated by account</a></li>
 			</ol>
     </div>
 </body>
